log
Fri 06 Oct 2023 06:30:00 PM UTC: 
 sudoku.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:68:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   68 | int main( int argc, char *argv[])
      |     ^~~~
Compilation failed
1ce5ac7
Fri 06 Oct 2023 06:30:22 PM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 0/70
ec30b89
Fri 06 Oct 2023 06:31:16 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
3656b99
Fri 06 Oct 2023 06:52:59 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
20cc1fb
Fri 06 Oct 2023 06:56:27 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
83983f9
Fri 06 Oct 2023 07:05:50 PM UTC: 
 sudoku.c | 19 ++++++-------------
 1 file changed, 6 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:16: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   62 |             if(node->sudo[i][j] == 0)
      |                ^~~~
      |                Node
sudoku.c:62:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bbd6583
Fri 06 Oct 2023 07:06:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b2f178b
Fri 06 Oct 2023 07:08:12 PM UTC: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:19: error: ‘i’ undeclared (first use in this function)
   57 |     for (raw = 0; i < 9; i++)
      |                   ^
sudoku.c:57:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:26: error: ‘j’ undeclared (first use in this function)
   59 |         for (column = 0; j < 9; j++)
      |                          ^
Compilation failed
13905ed
Fri 06 Oct 2023 07:08:36 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dd2860c
Fri 06 Oct 2023 07:15:02 PM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
361e373
Fri 06 Oct 2023 07:15:22 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d346925
Fri 06 Oct 2023 07:16:58 PM UTC: 
 sudoku.c | 38 ++++++++++----------------------------
 1 file changed, 10 insertions(+), 28 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:48:9: error: unused variable ‘list’ [-Werror=unused-variable]
   48 |   List *list = createList();
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
e7858a9
Fri 06 Oct 2023 07:17:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a33aac
Fri 06 Oct 2023 07:23:18 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:71:11: error: unused variable ‘node’ [-Werror=unused-variable]
   71 |     Node* node = copy(n);
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
5a33aac
